<resources>
    <string name="app_name">Scannapp</string>

    <string name="title_activity_sub">SubActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="dialog_finish_title">Save</string>
    <string name="finish">finish</string>
    <string name="add_page">add page</string>


    <!-- Settings -->
    <string name="title_activity_settings"> Settings </string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_scan">Scan</string>
    <string name="pref_header_pdf">PDF</string>
    <string name="pref_header_ocr">OCR</string>

    <string name="pref_key_document_count">pref_key_document_count</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_item_monthly">Month</string>
    <string name="drawer_item_recent">Recent</string>
    <string name="drawer_item_category">Category</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>


    <string name="menu_item_email_yourself">Email to yourself</string>
    <string name="pref_key_image_quality">pref_key_image_quality</string>
    <integer name="pref_default_image_quality">90</integer>
    <string name="pref_title_image_quality">Image Quality</string>
    <string name="saved_successfully">Document was successfully saved.</string>
    <string name="add_category">Add new category</string>
    <string name="menu_item_assign_category">Assign to category</string>
    <string name="menu_item_delete_document">Delete</string>
    <string name="note">Note</string>
    <string name="pref_key_ocr_language">pref_key_ocr_language</string>
    <string name="pref_default_ocr_language">eng</string>
    <string name="search_hint">Search documents…</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="add_account">Add account</string>
    <string name="menu_item_add_gallery">Add from Gallery</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="menu_item_ocr">Ocr</string>
    <string name="menu_item_rename">Rename</string>
    <string name="select_all">Select all</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="title_document">Documents</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="print">Print</string>
    <string name="add_mock_document">add mock document</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mock_secondary_text">Secondary text Secondary text Secondary text Secondary text</string>
    <string name="mock_primary_text">Primary Text</string>
    <string name="add_photo">Add photo</string>
    <string name="convert_pdf_positiv">The document was successfully converted to PDF.</string>
    <string name="convert_pdf_negativ">An error occured while converting the document to PDF.</string>
    <string name="doc_no_picture">The document has no pictures</string>
    <string name="error_scan">An unexpected error occured</string>
    <string name="name_in_use">Name is already in use</string>
    <string name="rename_pic">Rename picture</string>
    <string name="doc_no_pic">The document has no pictures</string>
    <string name="error">An unexpected error occurred</string>
    <!-- Navgiation Drawer -->

</resources>
