<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mode_item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="2" app:showAsAction="never" />

    <item
        android:id="@+id/menu_picture_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="99" app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_picture_copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_action_content_copy"
        android:orderInCategory="98" app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/menu_picture_ocr"-->
        <!--android:title="Ocr"-->
        <!--android:icon="@drawable/ic_action_content_copy"-->
        <!--android:orderInCategory="97" app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_mode_item_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_action_brush"
        android:orderInCategory="1" app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mode_item_print"
        android:title="@string/print"
        android:orderInCategory="3" app:showAsAction="never" />    <!--<item-->
        <!--android:id="@+id/menu_picture_share"-->
        <!--android:title="Share"-->
        <!--android:icon="@drawable/ic_action_share"-->
        <!--android:orderInCategory="1" app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_mode_item_select_all"
        android:title="@string/select_all"
        android:orderInCategory="100" android:showAsAction="never" />



</menu>