<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/add_document"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/add_mock_document"-->
        <!--app:showAsAction="never"/>-->


    <item android:id="@+id/menu_item_clear_history" android:orderInCategory="100"
        android:title="@string/clear_search_history" app:showAsAction="never"/>


    <item android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/menu_item_select_all"
        android:title="@string/select_all"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>